<resources>
    <string name="app_name">Client Clock</string>
    <string name="slogan">Track your time to make every second count.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="today_project">Today\'s Project</string>
    <string name="new_project">New Project</string>
    <string name="welcome_message">Good Day!</string>
    <string name="welcome_message1">Get started with Client Clock Track app</string>
    <string name="my_team">My team</string>
    <string name="your_activity">Your Activity</string>
    <string name="see_all">See all</string>
    <string name="button">button</string>
    <string name="manage_timesheet">Manage Timesheet</string>
    <string name="every_second_counts_with_our_precision">Every second counts, with our precision.</string>
    <string name="set_goals">Set Goals</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="client_clock_label">Client Clock</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="category_list">Category List</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="client_clock_tracker">Client Clock Tracker</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tracker_label">Tracker</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="user_account_label">User Account</string>
    <string name="category_label">Category</string>


    <string name="add_goals_label">Your Add Goals Label</string>
    <string name="goal_name_label">Your Goal Name Label</string>
    <string name="minimum_goal_label">Your Minimum Goal Label</string>
    <string name="maximum_goal_label">Your Maximum Goal Label</string>
    <string name="add_new_goal_label">Your Add New Goal Label</string>
    <string name="set_goals_label">Your Set Goals Label</string>
    <string name="save_label">Your Save Label</string>
    <string name="graph">Graph</string>
    <string name="select_date_range">Select Date Range:</string>
    <string name="select">Select</string>


    <string-array name="categoty_array">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
    </string-array>


</resources>