<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddGoals">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- linear layout!-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- back button!-->
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="123dp"
                android:layout_height="24dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="55dp"
                android:background="@color/transparent"
                android:src="@drawable/back_button_sign1"
                android:onClick="onClick"/>

            <!-- text view to create new project!-->
            <TextView
                android:id="@+id/txt_Goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_goals_label"
                android:textColor="@color/black"
                android:fontFamily="@font/jost_medium"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtGoalName"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:editable="false"
                android:ems="10"
                android:hint="@string/goal_name_label"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtMinGoal"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:editable="false"
                android:ems="10"
                android:hint="@string/minimum_goal_label"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtMaxGoal"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:editable="false"
                android:ems="10"
                android:hint="@string/maximum_goal_label"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddGoal"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:gravity="center_horizontal|center_vertical"
                android:paddingEnd="16dp"
                android:text="@string/add_new_goal_label"
                android:fontFamily="@font/jost_medium"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/button_cornered"
                android:textColor="@color/blue_light"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>