<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateGraph">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="55dp"
            android:background="@color/transparent"
            android:src="@drawable/back_button_sign1" />

        <TextView
            android:id="@+id/txt_Graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/graph"
            android:textColor="@color/black"
            android:fontFamily="@font/jost_medium"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_range"
            android:fontFamily="@font/jost_medium"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select start date"
            android:inputType="date" />

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Select" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="End Date: "
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select end date"
            android:inputType="date" />

        <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/select" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Chart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
